# leg_tracker

./: CHANGELOG.rst  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  package.xml
include/leg_tracker/: cluster_features.h  laser_processor.h
launch/: individual_leg_tracker.launch  joint_leg_tracker.launch  robogame_test.launch
launch/demos/: demo_moving_super_crowded.launch  demo_stationary_cluttered_environment.launch  demo_stationary_simple_environment.launch  milvus_bag1.launch
launch/training/: extract_positive_training_clusters_res=0.33.launch  train_leg_detector_res=0.33.launch
msg/: Cluster.msg  ClusterArray.msg  Leg.msg  LegArray.msg  Person.msg  PersonArray.msg
rosbags/demos/: demo_stationary_simple_environment.bag
rosbags/demos/rviz/: demo_moving_super_crowded.rviz  demo_stationary_cluttered_environment.rviz  demo_stationary_simple_environment.rviz
rosbags/training_scans_res=0.33/: negative_2.bag  positive_1_extracted.bag  positive_2_extracted.bag  positive_3_extracted.bag  positive_4_extracted.bag  positive_6_extracted.bag  positive_7_extracted.bag  tracking_experiment.ipynb
rosbags/training_scans_res=0.33/.ipynb_checkpoints/: tracking_experiment-checkpoint.ipynb
rosbags/training_scans_res=0.33/positive_not_extracted/: positive_1.bag  positive_2.bag  positive_3.bag  positive_4.bag  positive_5.bag  positive_6.bag  positive_7.bag
scripts/: individual_leg_tracker.py  joint_leg_tracker.py
src/: cluster_features.cpp  detect_leg_clusters.cpp  extract_positive_training_clusters.cpp  laser_processor.cpp  local_occupancy_grid_mapping.cpp  train_leg_detector.cpp
urdf/: FRMI_model.urdf.xacro  robogame.urdf
